# youtube_audio_dl

./: .gitignore  LICENSE  README.md  mix.exs  ytdl  ytdl-interactive
docs/: CACHE_GUIDE.md  MUSIC_EXAMPLES.md  QUICK_START.md  TRANSIENT_DETECTION_TECHNOLOGIES.md  TROUBLESHOOTING.md  TWO_STAGE_CHOP_GUIDE.md
juce_filter/: CMakeLists.txt  main.cpp
lib/: youtube_audio_dl.ex
lib/mix/tasks/: check_clicks.ex  export_audacity.ex
lib/youtube_audio_dl/: cache.ex  music.ex  search.ex
lib/youtube_audio_dl/audio/: drum_slicer.ex  drum_slicer_v2.ex  examples.ex  peak_chopper.ex  simple_peak_finder.ex  transient_detector.ex  wav_writer.ex  waveform_slicer.ex  window_peak_finder.ex
scripts/: chop_ml.py  demo_parameters.exs  find_hihat_chops.exs  find_kick_chops.exs
simple_filter/: NORMALIZATION_GUIDE.md  README_DSP.md  TEST_RESULTS.md  dsp_pipeline.h  filter.cpp  normalize.cpp  onset_detector.cpp  pipeline_demo.cpp
simple_filter_demos/: LISTEN_GUIDE.txt
test/: youtube_audio_dl_test.exs
test/audio/: transient_detector_test.exs
